# MCE_Tercer-Semestre

./: .gitignore
Multimodal/T1/: pyproject.toml
Multimodal/T1/data/: submission.csv
Multimodal/T1/data/test/: tracks_fma_test_audio_features.csv  tracks_fma_test_chromacens_features.csv  tracks_fma_test_chromacqt_features.csv  tracks_fma_test_chromastft_features.csv  tracks_fma_test_metadata.csv  tracks_fma_test_mfcc_features.csv  tracks_fma_test_rmse_features.csv  tracks_fma_test_social_features.csv  tracks_fma_test_spectral_features.csv  tracks_fma_test_tonnetz_features.csv  tracks_fma_test_zcr_features.csv
Multimodal/T1/data/train/: tracks_fma_train_audio_features.csv  tracks_fma_train_metadata.csv  tracks_fma_train_rmse_features.csv  tracks_fma_train_social_features.csv  tracks_fma_train_zcr_features.csv
Multimodal/T2/: .gitignore  data.dvc  models.dvc  pyproject.toml
Multimodal/T2/.dvc/: .gitignore
Multimodal/T2/codigo/: Tarea002_Gustavo_Hernandez.ipynb  fun.py  my_fun.py  problema3.py
Multimodal/T2/documento/: Tarea002_Gustavo_Hernandez.aux  Tarea002_Gustavo_Hernandez.bbl  Tarea002_Gustavo_Hernandez.fdb_latexmk  Tarea002_Gustavo_Hernandez.fls  Tarea002_Gustavo_Hernandez.tex  Tarea002_Gustavo_Hernandez.toc  bib.bib  figure.dvc  reporte.tex
NLP-Vision/: pyproject.toml
NLP-Vision/Tareas/T1/: GHA_T1.py  prueba.ipynb  pyproject.toml
NLP-Vision/Tareas/T1/codigo/: __init__.py  config.py  main.py
NLP-Vision/Tareas/T2/: README.md  mistral_perplexity_results.txt  pyproject.toml  requirements.txt
NLP-Vision/Tareas/T2/codigo/: scrape_songs.py
NLP-Vision/Tareas/T2/data/: lyrics_dataset.tsv  test_lyrics_alpaca.json
NLP-Vision/Tareas/T3/: Tarea3-Vision.ipynb
NLP-Vision/Tareas/visionT2/: .gitignore  mlruns.dvc  outputs.dvc  pyproject.toml
(+148 files in other folders)
