[project]
name = "nlp-vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gensim>=4.3.3",
    "ipykernel>=6.30.1",
    "ipython>=8.37.0",
    "matplotlib>=3.10.5",
    "nltk>=3.9.1",
    "numpy>=1.26.4",
    "pandas>=2.3.2",
    "pip>=25.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "spacy>=3.8.7",
]
