[project]
name = "t1-mir"
version = "0.1.0"
description = "Tarea 1 de Analisis Multimodal"
requires-python = ">=3.12"
dependencies = [
    "ipykernel==6.30.1",
    "matplotlib==3.10.6",
    "mlflow==3.3.2",
    "numpy==2.3.3",
    "pandas==2.3.2",
    "plotly==6.3.0",
    "scikit-learn==1.7.2",
    "seaborn==0.13.2",
    "torch==2.8.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
